--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
-	<a href="pages/about.html">About</a>
-
+    <h1>Hi im Tathony!</h1>
+ 
 
 </body>
 </html>
