--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
-	<a href="pages/about.html">About</a>
+    <h1>Im Tathony!</h1>
+
 
 
 </body>
