--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div style="color: white; background-color: black;">...</div>
-    <h1>Im Tathony!</h1>
+    <h1>I am Tathony!</h1>
 
 
 
