--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <div style="color: white; background-color: black;">...</div>
+    <div style="color: white; background-color: black;">
     <h1>I am Tathony!</h1>
+    </div>
+
 
 
 
