--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div style="color: white; background-color: black;">
-    <h1>I am Tathony!</h1>
+    <h1>I'm Tathony!</h1>
     </div>
 
 
