--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    div {
+      color: white;
+      background-color: black;
+    }
+
+    p {
+      color: red;
+    }
+    </style>
+    
     <link rel="stylesheet" hred="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +20,6 @@
 </head>
 
 <body>
-    <div style="color: white; background-color: black;">
     <h1>I'm Tathony!</h1>
-    </div>
-
-
-
-
 </body>
 </html>
