--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
+  <style>
     div {
       color: white;
       background-color: black;
@@ -10,16 +10,7 @@
     p {
       color: red;
     }
-    </style>
-    
-    <link rel="stylesheet" hred="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  </style>
 </head>
-
-<body>
-    <h1>I am Tathony!</h1>
-</body>
+<body>I'm Tathony!</body>
 </html>
