--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     }
   </style>
 </head>
-<body>I'm Tathony!</body>
+<body>
+  <div>red</div>
+<div>white</div>
+<p>I am Tathony</p>
+ </body>
 </html>
