--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     }
   </style>
 </head>
-<body>
-  <div>red</div>
-<div>white</div>
-<p>I am Tathony</p>
- </body>
+  <body>
+    <div>red</div>
+    <div>white</div>
+    <p>I am Tathony</p>
+    <a href="www.op.gg/summoners/na/TinFoilSlayer">click me</a>
+  </body>
 </html>
