--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div>white</div>
     <p>I am Tathony</p>
     <a href="www.op.gg/summoners/na/TinFoilSlayer">click me</a>
+    <a href="https://www.theodinproject.com/about">click me1</a>
   </body>
 </html>
