--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>red</div>
     <div>white</div>
     <p>I am Tathony</p>
-    <a href="www.op.gg/summoners/na/TinFoilSlayer">click me</a>
-    <a href="https://www.theodinproject.com/about">click me1</a>
+    <a href="https://www.op.gg/summoners/na/TinFoilSlayer">click</a>
+
   </body>
 </html>
