--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   </style>
 </head>
   <body>
-    <div>red</div>
     <div>white</div>
+    <p>red</p>
     <p>I am Tathony</p>
-    <a href="https://www.op.gg/summoners/na/TinFoilSlayer">click</a>
 
   </body>
 </html>
